<resources>
    <string name="app_name">MineClick</string>
    <string name="mineclick">MineClick</string>
    <string name="acheter_des_am_liorations">Acheter des améliorations</string>
    <string name="_125">125</string>
    <string name="co_t_30">coût : 30</string>
    <string name="cette_potion_vous_permettra_d_activer_autoclick_pendant_30s">Cette potion vous permettra d\'activer autoclick pendant 30s</string>
    <string name="acheter">acheter</string>
    <string name="retour">retour</string>
    <string name="_1000">1000</string>
    <string name="ceci_n_est_pas_un_produit_officiel_mojang">CECI N\'EST PAS UN PRODUIT OFFICIEL MOJANG</string>
    <string name="on_ne_clique_jamais_assez">On ne clique jamais assez…</string>
    <string name="menu">Menu</string>
    <string name="enderchest">enderchest</string>
    <string name="emeraude">emeraude</string>
    <string name="pioche">pioche</string>
    <string name="chest">chest</string>
    <string name="slime">slime</string>
    <string name="pnj">pnj</string>
    <string name="potion3">potion3</string>
    <string name="nuage">nuage</string>
    <string name="potion1">potion1</string>
    <string name="potion2">potion2</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="saved_money">money</string>
    <string name="saved_clics">clic</string>
    <string name="saved_level">level</string>
    <string name="reprendre_la_partie">Reprendre la partie</string>
    <string name="_0">0</string>
    <string name="saved_page">page</string>
    <string name="saved_potion1">potion1</string>
    <string name="saved_potion2">potion2</string>
    <string name="saved_potion3">potion3</string>
    <string name="saved_tempspotion1">saved_tempspotion1</string>
    <string name="utiliserpotion1">utiliserpotion1</string>
    <string name="utiliserpotion2">utiliserpotion2</string>
    <string name="boutique">Boutique</string>
    <string name="inventaire">Inventaire</string>
    <string name="mine">Mine</string>
    <string name="cpt">cpt</string>
    <string name="level">level</string>
    <string name="textview">TextView</string>
    <string name="image">image</string>
    <string name="textview">TextView</string>
    <string name="utiliser">utiliser</string>
    <string name="utiliser">utiliser</string>
    <string name="utiliser">utiliser</string>
    <string name="x0">x0</string>
    <string name="bienvenue_dans_votre_inventaire">Bienvenue dans votre inventaire...</string>
    <string name="retourr">Retour</string>
    <string name="background_images">Background Images</string>
    <string name="www_fondsecran_eu">www.fondsecran.eu/</string>
    <string name="illustration_images">Illustration Images</string>
    <string name="www_minecraft_fr_gamepedia_com">www.minecraft-fr.gamepedia.com/</string>
    <string name="www_minecraft_novaskin_me">www.minecraft.novaskin.me/</string>
    <string name="minecraftia_2_0_font">Minecraftia_2.0.font</string>
    <string name="fonts">Fonts</string>
    <string name="minecrafter_font">Minecrafter.font</string>
    <string name="bienvenue_dans_ma_boutique_quelle_potion_te_ferait_plaisir">Bienvenue dans ma boutique ! Quelle potion te ferait plaisir ?</string>
    <string name="x0">x0</string>
    <string name="x0">x0</string>
    <string name="x0">x0</string>
    <string name="pig">pig</string>
    <string name="bedrock">bedrock</string>
    <string name="commandblock">commandblock</string>
</resources>
