<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondcredit"
    tools:context=".CreditsActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/mineclicktitre"
        android:text="@string/mineclick"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="60dp"
        android:background="@mipmap/bouton"
        android:onClick="onClickRetour"
        android:text="@string/retourr"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/font2" />

    <TextView
        android:id="@+id/backgroundI"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/mineclicktitre"
        android:text="@string/background_images"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titre" />

    <TextView
        android:id="@+id/textBackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/www_fondsecran_eu"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundI" />

    <TextView
        android:id="@+id/illustration"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/mineclicktitre"
        android:text="@string/illustration_images"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBackground" />

    <TextView
        android:id="@+id/illustr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/www_minecraft_fr_gamepedia_com"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illustration" />

    <TextView
        android:id="@+id/illustr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/www_minecraft_novaskin_me"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illustr1" />

    <TextView
        android:id="@+id/fonts"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/mineclicktitre"
        android:text="@string/fonts"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illustr2" />

    <TextView
        android:id="@+id/font1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/minecraftia_2_0_font"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fonts" />

    <TextView
        android:id="@+id/font2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/minecrafter_font"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/font1" />


</androidx.constraintlayout.widget.ConstraintLayout>