<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fondaccueil"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="293dp"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/mineclicktitre"
        android:text="@string/mineclick"
        android:textColor="#fff"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="225dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:background="@mipmap/bouton"
        android:fontFamily="@font/mineclicktexte"
        android:onClick="onClickBoutique"
        android:text="@string/acheter_des_am_liorations"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/money"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.038"
        app:srcCompat="@mipmap/emeraude" />

    <TextView
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/_0"
        android:textColor="#fff"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.04" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/bedrock" />

    <Button
        android:id="@+id/suivant"
        android:layout_width="334dp"
        android:layout_height="46dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="343dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="48dp"
        android:background="@mipmap/bouton"
        android:fontFamily="@font/mineclicktexte"
        android:onClick="onClickJouer"
        android:text="@string/reprendre_la_partie"
        android:textColor="#fff"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="252dp"
        android:layout_height="32dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/on_ne_clique_jamais_assez"
        android:textColor="#FFEB3B"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="141dp"
        android:layout_height="240dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="54dp"
        app:layout_constraintBottom_toTopOf="@+id/suivant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@mipmap/skin" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="60dp"
        android:onClick="onClickInventaire"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:srcCompat="@mipmap/enderchest" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintBottom_toTopOf="@+id/suivant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:srcCompat="@mipmap/cochon" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/mineclicktexte"
        android:text="@string/ceci_n_est_pas_un_produit_officiel_mojang"
        android:textColor="#fff"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.636" />

</androidx.constraintlayout.widget.ConstraintLayout>